Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • mesa mesa
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 3,068
    • Issues 3,068
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 1,006
    • Merge requests 1,006
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar

Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.

  • MesaMesa
  • mesamesa
  • Issues
  • #6977
Closed
Open
Issue created Aug 02, 2022 by Roman Stratiienko@roman.stratiienkoContributor

v3dv: android: VTS big regression after 316728a5

Command:

atest CtsDeqpTestCases -- --module-arg CtsDeqpTestCases:include-filter:dEQP-VK.wsi.android.*

Prior to the commit VTS results were:

Summary (Test executed with 1 devices.)
-------
arm64-v8a CtsDeqpTestCases: Passed: 768, Failed: 0, Ignored: 0, Assumption Failed: 0,   
arm64-v8a CtsDeqpTestCases: Passed: 9, Failed: 2, Ignored: 0, Assumption Failed: 0,   
arm64-v8a CtsDeqpTestCases: Passed: 21, Failed: 0, Ignored: 0, Assumption Failed: 0,

With the commit:

Summary (Test executed with 1 devices.)
-------
arm64-v8a CtsDeqpTestCases: Passed: 689, Failed: 79, Ignored: 0, Assumption Failed: 0,   
arm64-v8a CtsDeqpTestCases: Passed: 7, Failed: 4, Ignored: 0, Assumption Failed: 0,   
arm64-v8a CtsDeqpTestCases: Passed: 18, Failed: 3, Ignored: 0, Assumption Failed: 0,  

During VTS there're a lot of crashes caused by null sync_type value returned by get_semaphone_sync_type() at https://gitlab.freedesktop.org/mesa/mesa/-/blob/875ee25e9812a1e813f61033daff5d26c7679167/src/vulkan/runtime/vk_semaphore.c#L416 which is later dereferenced in vk_sync_create

Edited Aug 02, 2022 by Roman Stratiienko
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking